<resources>
    <string name="app_name">QuizUp</string>
    <string name="splashscreen">splashscreen</string>
    <string name="take_notes_button">My Notes</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="flashcard">Flashcards</string>
    <string name="take_a_quiz">Take a Quiz</string>
    <string name="todo">TODO</string>
    <string name="add_button">Add</string>
    <string name="add_note">Start your Note..</string>
    <string name="title_space">Enter Title</string>
    <string name="add_question"> Start adding a question...</string>
    <string name="add_answer">Add the answer for the question</string>
    <string name="add_answer2">What is the answer?</string>
    <string name="add_answer3">Answer the question</string>
    <string name="home_button">Home</string>

</resources>
