<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/notes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:backgroundTint="#E4F0FF"
        android:text="@string/take_notes_button"
        app:layout_constraintEnd_toStartOf="@+id/flashcard"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toEndOf="@+id/quiz_button"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/quiz_button"
        android:layout_width="119dp"
        android:layout_height="54dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="254dp"
        android:backgroundTint="#E4F0FF"
        android:text="@string/create_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/flashcard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/flashcard"
        android:layout_width="114dp"
        android:layout_height="56dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="254dp"
        android:backgroundTint="#E4F0FF"
        android:text="@string/flashcard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quiz_button"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="133dp"
        android:layout_marginBottom="161dp"
        android:backgroundTint="#E4F0FF"
        android:text="@string/take_a_quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/flashcard"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toEndOf="@+id/quiz_button"
        app:layout_constraintTop_toBottomOf="@+id/notes_button"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="132dp"
        android:layout_height="148dp"
        android:layout_marginStart="139dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toTopOf="@+id/notes_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>