<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddQuestions">

    <android.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#E4F0FF"
       />

<!--This page will allow the user to add questions and answers that they will be quizzed on in the quiz page-->
    <EditText
        android:id="@+id/question"

        android:layout_width="365dp"
        android:layout_height="217dp"
        android:background="#E4F0FF"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_question"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <EditText
        android:id="@+id/answer"

        android:layout_width="325dp"
        android:layout_height="69dp"
        android:background="#E4F0FF"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/add_answer"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.235" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

    <Button
        android:id="@+id/questions_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="left"
        android:text="@string/home_button"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>